# pink-elevenlabs

./: .env.example  .gitignore  README.md  pyproject.toml
src/pink_elevenlabs/: __init__.py  config.py
src/pink_elevenlabs/cli/: main.py
src/pink_elevenlabs/core/: elevenlabs.py
